<resources>
    <string name="app_name">ATMOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_announcements">Announcements</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="menu_credits">App Credits</string>
    <string name="menu_reachus">Reach Us</string>
    <string name="menu_map">Campus Map</string>
    <string name="menu_party">Slumber Party</string>

    <string name="upcoming_events">Upcoming events</string>
    <string name="announcements">Announcements</string>

    <string name="organizing_body">Organizing Body</string>
    <string name="tech_senate">Tech Senate</string>

    <string name="day_one">Day 1</string>
    <string name="day_two">Day 2</string>
    <string name="day_three">Day 3</string>

    <string name="oct18">OCT 18</string>
    <string name="oct19">OCT 19</string>
    <string name="oct20">OCT 20</string>
    <string name="oct21">OCT 21</string>

    <string name="Competition">Competition</string>
    <string name="Workshop">Workshop</string>
    <string name="Talk">Talk</string>
    <string name="Proshow">Proshow</string>

    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="telugu">Telugu</string>
    <string name="bengali">Bengali</string>
    <string name="tamil">TAMIL</string>
    <string name="french">FRENCH</string>
    <string name="japanese">JAPANESE</string>
    <string name="thai">THAI</string>
    <string name="persian">PERSIAN</string>

    <string name="none">Remove filter</string>

    <string name="no_announcements">There are no announcements currently</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="bookmark">Bookmark</string>
    <string name="bookmark_notification_warning">You\'ll receive a notification 15 minutes before the event starts.</string>
    <string name="default_notification_channel_id">General</string>

    <string name="reach_us_text">From Secunderabad Railway Station to BITS Pilani, Hyderabad Campus, one has to travel 22 KM on Rajiv Rahadari/Karim Nagar Highway, up to Dongala Mysamma Junction after Aalankrita Resorts in Thumkunta Village and then take a right turn towards Ghatkesar. After travelling 1.5 KMs on this road, there is again a diversion to the right leading to the Campus. BITS sign boards indicating the directions are available on the way.
\n\nThere is a direct Bus No. 212 from Secunderabad Railway Station (Gurudwara Point) to BITS Pilani Hyderabad Campus Main Gate.
\n\nAPSRTC City Bus Timings : Bus No.212
\n\nFrom Secunderabad Railway Station (Gurudwara Point) to BITS Main Gate:
\n07:50, 8:20, 8:50, 09:50, 11:00, 12:00, 13:00, 14:10, 15:05, 16:05, 17:20, 18:15, 19:15, 20:15, 21:15.
\n\nFrom BITS Main Gate to Secunderabad Railway Station :
\n06:55, 07:55, 08:50, 09:20, 09:50, 11:00, 12:00, 13:00, 14:00, 15:05, 16:05, 18:15, 19:15, 20:15
\n\nBesides that, there are City Buses having numbers 211S, 211A, 211C, 211D, 211E, 211J, 211K, 211T, 211U, 567, 568, 569 which ply from Secunderabad Railway Station to various destinations on the Campus side. Further, there are many APSRTC buses from Secunderabad and Jubilee bus stand to Karim Nagar, Siddhipet, Ramagundam, Gajwel, Cheriyal etc. People can board any of these buses, get down either at Thumkunta or Dongala Mysamma junction which is 1KM away and take an auto to the campus.</string>
    <string name="atmos_2019">ATMOS 2019</string>
    <string name="the_10th_edition_of_atmos_our_annual_techno_management_fest_returns_with_grandeur_greater_than_its_predecessors_this_18th_of_october_since_its_inception_in_2010_atmos_reputed_for_its_quality_of_workshops_quizzes_lectures_technical_exhibitions_and_competetions_is_among_the_fastest_growing_tech_fests_in_our_country_providing_one_of_the_largest_platforms_for_students_academicians_and_enterpreneurs_across_the_country_to_showcase_their_talents_in_the_fields_science_and_technology_with_a_staggeringly_high_footfall_and_participation_of_students_from_300_colleges_every_year_atmos_2019_true_to_its_theme_a_wheel_through_time_aims_to_takes_us_all_through_time">The 10th edition of ATMOS, our annual techno-management fest returns with grandeur greater than its predecessors this 18th of October. Since its inception in 2010, ATMOS, reputed for its quality of workshops, quizzes,lectures, technical exhibitions, and competetions, is among the fastest growing tech-fests in our country providing one of the largest platforms for students, academicians and enterpreneurs across the country to showcase their talents in the fields science and technology.With a staggeringly high footfall and participation of students from 300 colleges every year, ATMOS 2019, true to its theme, A WHEEL THROUGH TIME, aims to takes us all through time.</string>
    <string name="todo">TODO</string>
    <string name="android_developers">ANDROID DEVELOPERS</string>
    <string name="ui_ux">UI/UX</string>
    <string name="nikhil_peruri">Nikhil Peruri</string>
    <string name="president">President</string>

</resources>
