<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_party"
            android:icon="@drawable/movie"
            android:title="@string/menu_party"/>
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact_us"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/app_credits"
            android:title="@string/menu_credits" />
        <item
            android:id="@+id/nav_reachus"
            android:icon="@drawable/reach_us"
            android:title="@string/menu_reachus" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_map" />
    </group>


</menu>
