<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="9dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/backgroundDark"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="false"
    android:id="@+id/cardview">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint">

        <TextView
            android:id="@+id/contactUsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/nikhil_peruri"
            android:textSize="16sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/rajdhani_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contactUsPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contactUsName"
            android:layout_marginTop="2dp"
            android:text="@string/president"
            android:fontFamily="@font/rajdhani"
            android:textSize="15sp"
            android:textColor="@color/textSecondary"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@id/constraint"/>

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/call"
            android:tint="@color/textSecondary"
            app:layout_constraintEnd_toEndOf="@id/constraint"
            app:layout_constraintTop_toTopOf="@id/constraint"
            app:layout_constraintBottom_toBottomOf="@id/constraint"
            android:layout_marginEnd="16sp"
            android:contentDescription="@string/todo" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>